--- a/WebContent/common/variable.jspf
+++ b/WebContent/common/variable.jspf
@@ -65,15 +65,15 @@
 					Logout
 			</button>
 			<label class="w3-right w3-small" style="margin:10px 10px 0px 0px;"> <b>${name}</b> 님 환영합니다.</label>
-			</c:if>
 			
-<%-- 			<c:if test="${count != 0}">
-         <div class="w3-right w3-small" style="margin:10px 10px 0px 0px;"><a href="<%=request.getContextPath()%>/message/sendmessageForm">쪽지&nbsp;${count}<strong><font color="red">N</font></strong></a></div>
-         </c:if>
+			
+		 <c:if test="${count != 0}"> 
+         <div class="w3-right w3-small" style="margin:10px 10px 0px 0px;"><a href="<%=request.getContextPath()%>/message/messagelist">쪽지&nbsp;${count}<strong><font color="red">N</font></strong></a></div>
+     	 </c:if>
          <c:if test="${count == 0}">
          <div class="w3-right w3-small" style="margin:10px 10px 0px 0px;"><a href="<%=request.getContextPath()%>/message/sendmessageForm">쪽지</a></div>
-         </c:if> --%>
-			
+         </c:if>
+		</c:if>
 		</div>	
 			
 			
